[package]
name = "webfetch"
version = "0.1.0"
edition = "2021"
description = "A fast, token-efficient headless browser fetcher for AI agents with captcha solving"

[dependencies]
axum = { version = "0.7", features = ["json"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"
html2md = "0.2"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
