[package]
name = "wdot"
version = "0.1.0"
edition = "2021"
description = "wdot (Web Dynamic Output Tool) — a fast, stealthy headless browser for AI agents with OSINT, human behavior mimicry, and adaptive anti-detection"

[dependencies]
axum = { version = "0.7", features = ["json"] }
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
html2md = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
